# django-rest-paystack

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: lint_and_test.yml
django_rest_paystack/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
django_rest_paystack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
paystack/: __init__.py  admin.py  apps.py  models.py  paystack_urls.py  serializers.py  urls.py  utils.py  views.py
paystack/migrations/: 0001_initial.py  0002_auto_20211209_1908.py
paystack/serializers/: __init__.py  customer.py  transaction.py
paystack/services/: __init__.py  base_api_service.py  customer_service.py  payment_gateway.py  paystack_gateway.py  transaction_service.py  transfer_service.py  webhook.py  webhook_service.py
paystack/views/: __init__.py  customer.py  transaction.py  transfer.py  webhook.py
tests/: conftest.py  mock_data.py  settings.py
tests/mixins/: __init__.py  request_mixin.py  urls_mixin.py
tests/test_services/: test_customer_service.py  test_transaction_service.py
tests/test_views/: test_customer.py  test_transactions.py
