[metadata]
name = django-rest-paystack
version = 1.0.1
author = Nyior Clement
author-email = cnyior27@gmail.com
description = A minimal SDK for integrating Paystack into your django-rest API backend.
description-file = README.md
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/Nyior/django-rest-paystack
project-urls =
    Bug Tracker = https://github.com/Nyior/django-rest-paystack/issues
    Source Code = https://github.com/Nyior/django-rest-paystack
keywords =
    django
    rest
    api
    paystack
    rest-framework
    payment
    initialize payment
    verify payment
    charge authorization
    handle webhook
license = MIT
license-file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = True
python_requires = >=3.7
install_requires =
    Django>=2.2
    djangorestframework>=3.1.3



[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
django_find_project = false
testpaths =
    tests


